// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Button Danger 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #fff;
  background: #eb5757;
  border: 1px solid #eb5757;
}

<button
  className="c0 c1"
>
  danger button
</button>
`;

exports[`FileProperties Button Danger Bordered 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #eb5757;
  background: #fff;
  border: 1px solid #fff;
}

<button
  className="c0 c1"
>
  danger button with border
</button>
`;

exports[`FileProperties Button Default 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #fff;
  background: #595959;
  border: 1px solid #595959;
}

<button
  className="c0 c1"
>
  default button
</button>
`;

exports[`FileProperties Button Default Bordered 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #595959;
  background: #fff;
  border: 1px solid #d9d9d9;
}

<button
  className="c0 c1"
>
  default button with border
</button>
`;

exports[`FileProperties Button Primary 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #fff;
  background: #1890ff;
  border: 1px solid #1890ff;
}

<button
  className="c0 c1"
>
  primary button
</button>
`;

exports[`FileProperties Button Primary Bordered 1`] = `
.c0 {
  padding: 4px 16px;
  text-align: center;
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 2px;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  color: #1890ff;
  background: #fff;
  border: 1px solid #fff;
}

<button
  className="c0 c1"
>
  primary button with border
</button>
`;

exports[`FileProperties Button Text 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 11px;
  font-weight: bold;
  color: #3582e5;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  border: none;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 0.5;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
>
  text button
</button>
`;
